--- a/WPF/App.xaml
+++ b/WPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF"
-             StartupUri="LichSuChamCong.xaml">
+             StartupUri="ChamCong.xaml">
     <Application.Resources>
          
     </Application.Resources>
