--- a/WPF/EmployeeManager.xaml
+++ b/WPF/EmployeeManager.xaml
@@ -1,12 +1,107 @@
 ﻿<Window x:Class="WPF.EmployeeManager"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF"
-        mc:Ignorable="d"
-        Title="EmployeeManager" Height="450" Width="800">
-    <Grid>
-        
+         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+  xmlns:local="clr-namespace:GoldManagement"
+  mc:Ignorable="d" 
+  d:DesignHeight="450" d:DesignWidth="1000">
+    <!--<UserControl.Resources>
+        <local:intToRole x:Key="intToRole" />
+    </UserControl.Resources>-->
+
+    <Grid Background="White">
+        <StackPanel>
+            <TextBlock Margin="0 10 0 20"  FontWeight="Light" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="Goldenrod">
+              Member Manager
+            </TextBlock>
+            <StackPanel Orientation="Vertical">
+                <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 0 0 10">
+                    <StackPanel>
+                        <Label  Height="auto" Content="Id"/>
+                        <TextBox x:Name="searchById" Width="97" Height="30" Margin="0 0 5 0"
+                                  Text="{Binding Id, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
+                                 ></TextBox>
+                    </StackPanel>
+                    <StackPanel>
+                        <Label Height="auto" Content="Name"/>
+                        <TextBox  x:Name="searchByName" Width="150" Height="30" Margin="0 0 5 0"
+                                  Text="{Binding UserName, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
+                                 ></TextBox>
+                    </StackPanel>
+                    <StackPanel>
+                        <Label  Height="auto" Content="Address"/>
+                        <TextBox  x:Name="searchByAddress" Width="150" Height="30" Margin="0 0 5 0"
+                                  Text="{Binding Address, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
+                                 ></TextBox>
+                    </StackPanel>
+                    <StackPanel>
+                        <Label Height="auto" Content="Phone"/>
+                        <TextBox  x:Name="searchByPhone" Width="150" Height="30" Margin="0 0 5 0"
+                                  Text="{Binding Phone, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
+                                 ></TextBox>
+                    </StackPanel>
+                    <StackPanel>
+                        <Label Height="auto" Content="Role"/>
+                        <ComboBox  x:Name="searchByRole" Width="150" Height="30" Margin="0 0 5 0"
+                                     ItemsSource="{Binding RoleId, Mode=OneWay}"   
+                                     DisplayMemberPath="Name"
+                                     SelectedValuePath="Id"
+                                     SelectedValue="{Binding RoleId}"
+                                     DataContext="{Binding SelectedItem,ElementName=listView}"
+                                 />
+                    </StackPanel>
+                    <StackPanel>
+                        <Label Height="auto" Content="Password"/>
+                        <TextBox  x:Name="searchByPassword" Width="150" Height="30" Margin="0 0 5 0"
+                                  Text="{Binding Password, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
+                                 ></TextBox>
+                    </StackPanel>
+
+                    <Button  Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="Button_Search" 
+                             Background="Goldenrod" Foreground="White">
+                        Search
+                    </Button>
+                </WrapPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 0 0 10">
+                    <Button x:Name="btnReload"  Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" Margin="0 0 10 0" Click="Button_Reload"
+                             Background="Goldenrod" Foreground="White">
+                        Reload
+                    </Button>
+                    <Button x:Name="btnDelete"  Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" Margin="0 0 10 0" Click="Button_Delete"
+                          Background="Goldenrod" Foreground="White">
+                        Delete
+                    </Button>
+                    <Button x:Name="btnEdit" Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" Margin="0 0 10 0" Click="Button_Edit"
+                            Background="Goldenrod" Foreground="White">
+                        Edit
+                    </Button>
+                    <Button  Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" Margin="0 0 0 0" Click="Button_OpenCreate"
+                             Background="Goldenrod" Foreground="White">
+                        Add New
+                    </Button>
+                </StackPanel>
+            </StackPanel>
+            <Grid>
+                <ListView MaxHeight="400" x:Name="listView" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False" Width="auto" Grid.Column="0" SizeChanged="ListView_SizeChanged">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            <EventSetter Event="Selected" Handler="ListViewItem_Selected"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="MemberId" Width="100" DisplayMemberBinding="{Binding Path=Id }"/>
+                            <GridViewColumn Header="MemberName" Width="200" DisplayMemberBinding="{Binding Path=UserName}"/>
+                            <GridViewColumn Header="Address" Width="200" DisplayMemberBinding="{Binding Path=Address }"/>
+                            <GridViewColumn Header="Phone" Width="200" DisplayMemberBinding="{Binding Path=Phone}"/>
+                            <GridViewColumn Header="Password" Width="200" DisplayMemberBinding="{Binding Path=Password}"/>
+                            <GridViewColumn Header="Role" Width="100" DisplayMemberBinding="{Binding Path=RoleId, Converter={StaticResource intToRole}}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Grid>
+        </StackPanel>
     </Grid>
 </Window>
