Finished screen employee manager

--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -16,18 +16,18 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Login to your account" 
+        <TextBlock Text="Đăng nhập tài khoản" 
                    FontSize="18" FontWeight="Bold" Foreground="DodgerBlue"
                    HorizontalAlignment="Center" Margin="0,0,0,20"/>
 
-        <Label Content="User name" Grid.Row="1" 
+        <Label Content="Tên tài khoản" Grid.Row="1" 
                Height="30" FontSize="14" />
         
         <TextBox x:Name="tbUsername" Grid.Row="2" Height="35" Margin="0,0,0,10"
                  Padding="5" FontSize="14"
                  BorderBrush="LightGray"/>
         
-        <Label Content="Password" Grid.Row="3"
+        <Label Content="Mật khẩu" Grid.Row="3"
                Height="30" Margin="0,0,0,0"/>
         
         <PasswordBox Grid.Row="4" Height="35" Margin="0,0,0,0"
@@ -35,7 +35,7 @@
                      BorderBrush="LightGray"
                      x:Name="pbPassword"/>
 
-        <Button x:Name="btnLogin" Grid.Row="5" Content="Login"
+        <Button x:Name="btnLogin" Grid.Row="5" Content="Đăng nhập"
                 Height="40" Background="DodgerBlue" Foreground="White"
                 FontSize="16" FontWeight="Bold"
                 Margin="0,10,0,0" Click="Button_Login"/>
