--- a/WPF/EmployeeManager.xaml
+++ b/WPF/EmployeeManager.xaml
@@ -1,107 +1,137 @@
 ﻿<Window x:Class="WPF.EmployeeManager"
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-  xmlns:local="clr-namespace:GoldManagement"
-  mc:Ignorable="d" 
-  d:DesignHeight="450" d:DesignWidth="1000">
-    <!--<UserControl.Resources>
-        <local:intToRole x:Key="intToRole" />
-    </UserControl.Resources>-->
+         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+         xmlns:local="clr-namespace:WPF"
+         mc:Ignorable="d" 
+         d:DesignHeight="550" d:DesignWidth="800">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="7*" />
+            <ColumnDefinition Width="1.5*" />
+        </Grid.ColumnDefinitions>
 
-    <Grid Background="White">
-        <StackPanel>
-            <TextBlock Margin="0 10 0 20"  FontWeight="Light" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="Goldenrod">
-              Member Manager
-            </TextBlock>
-            <StackPanel Orientation="Vertical">
-                <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 0 0 10">
-                    <StackPanel>
-                        <Label  Height="auto" Content="Id"/>
-                        <TextBox x:Name="searchById" Width="97" Height="30" Margin="0 0 5 0"
-                                  Text="{Binding Id, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
-                                 ></TextBox>
-                    </StackPanel>
-                    <StackPanel>
-                        <Label Height="auto" Content="Name"/>
-                        <TextBox  x:Name="searchByName" Width="150" Height="30" Margin="0 0 5 0"
-                                  Text="{Binding UserName, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
-                                 ></TextBox>
-                    </StackPanel>
-                    <StackPanel>
-                        <Label  Height="auto" Content="Address"/>
-                        <TextBox  x:Name="searchByAddress" Width="150" Height="30" Margin="0 0 5 0"
-                                  Text="{Binding Address, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
-                                 ></TextBox>
-                    </StackPanel>
-                    <StackPanel>
-                        <Label Height="auto" Content="Phone"/>
-                        <TextBox  x:Name="searchByPhone" Width="150" Height="30" Margin="0 0 5 0"
-                                  Text="{Binding Phone, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
-                                 ></TextBox>
-                    </StackPanel>
-                    <StackPanel>
-                        <Label Height="auto" Content="Role"/>
-                        <ComboBox  x:Name="searchByRole" Width="150" Height="30" Margin="0 0 5 0"
-                                     ItemsSource="{Binding RoleId, Mode=OneWay}"   
-                                     DisplayMemberPath="Name"
-                                     SelectedValuePath="Id"
-                                     SelectedValue="{Binding RoleId}"
-                                     DataContext="{Binding SelectedItem,ElementName=listView}"
-                                 />
-                    </StackPanel>
-                    <StackPanel>
-                        <Label Height="auto" Content="Password"/>
-                        <TextBox  x:Name="searchByPassword" Width="150" Height="30" Margin="0 0 5 0"
-                                  Text="{Binding Password, Mode=OneWay}" DataContext="{Binding SelectedItem, ElementName=listView}"
-                                 ></TextBox>
-                    </StackPanel>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="220"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-                    <Button  Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="Button_Search" 
-                             Background="Goldenrod" Foreground="White">
-                        Search
-                    </Button>
-                </WrapPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 0 0 10">
-                    <Button x:Name="btnReload"  Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" Margin="0 0 10 0" Click="Button_Reload"
-                             Background="Goldenrod" Foreground="White">
-                        Reload
-                    </Button>
-                    <Button x:Name="btnDelete"  Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" Margin="0 0 10 0" Click="Button_Delete"
-                          Background="Goldenrod" Foreground="White">
-                        Delete
-                    </Button>
-                    <Button x:Name="btnEdit" Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" Margin="0 0 10 0" Click="Button_Edit"
-                            Background="Goldenrod" Foreground="White">
-                        Edit
-                    </Button>
-                    <Button  Width="80" Height="30" Padding="5 4" HorizontalAlignment="Right" Margin="0 0 0 0" Click="Button_OpenCreate"
-                             Background="Goldenrod" Foreground="White">
-                        Add New
-                    </Button>
-                </StackPanel>
-            </StackPanel>
+        <GroupBox Header="Ảnh đại diện" FontWeight="Bold" Padding="10" Grid.Column="0" Grid.Row="0">
+            <Image x:Name="imgAvt" Source="Resource\icon\user1.png" Width="auto" Height="auto"/>
+        </GroupBox>
+        <!-- Thông tin nhân viên -->
+        <GroupBox Header="Thông tin nhân viên" FontWeight="Bold" Padding="10" Grid.Row="0" Grid.Column="1" Margin="10,0,0,0">
             <Grid>
-                <ListView MaxHeight="400" x:Name="listView" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False" Width="auto" Grid.Column="0" SizeChanged="ListView_SizeChanged">
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="HorizontalContentAlignment" Value="Center" />
-                            <EventSetter Event="Selected" Handler="ListViewItem_Selected"/>
-                        </Style>
-                    </ListView.ItemContainerStyle>
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Header="MemberId" Width="100" DisplayMemberBinding="{Binding Path=Id }"/>
-                            <GridViewColumn Header="MemberName" Width="200" DisplayMemberBinding="{Binding Path=UserName}"/>
-                            <GridViewColumn Header="Address" Width="200" DisplayMemberBinding="{Binding Path=Address }"/>
-                            <GridViewColumn Header="Phone" Width="200" DisplayMemberBinding="{Binding Path=Phone}"/>
-                            <GridViewColumn Header="Password" Width="200" DisplayMemberBinding="{Binding Path=Password}"/>
-                            <GridViewColumn Header="Role" Width="100" DisplayMemberBinding="{Binding Path=RoleId, Converter={StaticResource intToRole}}"/>
-                        </GridView>
-                    </ListView.View>
-                </ListView>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="5*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="200" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Text="ID" Grid.Row="0" Margin="5"/>
+                    <TextBox x:Name="tbId" Grid.Row="0" Grid.Column="1" IsEnabled="False" Text="Thêm mới không cần ID" Margin="5"/>
+
+                    <TextBlock Text="Họ và tên" Grid.Row="1" Margin="5"/>
+                    <TextBox x:Name="tbName" Grid.Row="1" Grid.Column="1" Margin="5"/>
+
+                    <TextBlock Text="Giới tính" Grid.Row="2" Margin="5"/>
+                    <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
+                        <RadioButton x:Name="rbMale" Content="Nam" Margin="5"/>
+                        <RadioButton x:Name="rbFemale" Content="Nữ" Margin="5"/>
+                    </StackPanel>
+
+                    <TextBlock Text="Ngày sinh" Grid.Row="3" Margin="5"/>
+                    <DatePicker x:Name="dpDate" Grid.Row="3" Grid.Column="1" SelectedDate="1999-10-04" Margin="5"/>
+
+                    <TextBlock Text="Email" Grid.Row="4" Margin="5"/>
+                    <TextBox Grid.Row="4" Grid.Column="1" Margin="5"/>
+
+                    <TextBlock Text="Email" Grid.Row="4" Margin="5"/>
+                    <TextBox x:Name="tbMail" Grid.Row="4" Grid.Column="1" Margin="5"/>
+
+                    <TextBlock Text="Ảnh đại diện" Grid.Row="5" Margin="5"/>
+                    <Button x:Name="btnAvatar" Content="Chọn ảnh đại diện" Grid.Column="2" Grid.Row="5"  Margin="5" Height="17.96" Click="btnAvatar_Click"/>
+                </Grid>
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="200" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Text="Số điện thoại" Grid.Row="0" Margin="5"/>
+                    <TextBox x:Name="tbphone" Grid.Row="0" Grid.Column="1" Margin="5"/>
+
+                    <TextBlock Text="Địa chỉ" Grid.Row="1" Margin="5"/>
+                    <TextBox x:Name="tbAddress" Grid.Row="1" Grid.Column="1" Margin="5"/>
+
+                    <TextBlock Text="Phòng ban" Grid.Row="2" Margin="5"/>
+                    <ComboBox x:Name="cbDepartment" DisplayMemberPath="DepartmentName" Grid.Row="2" Grid.Column="1" Margin="5"/>
+
+                    <TextBlock Text="Chức vụ" Grid.Row="3" Margin="5"/>
+                    <ComboBox x:Name="cbPosition" DisplayMemberPath="PositionName" Grid.Row="3" Grid.Column="1" Margin="5"/>
+
+                    <TextBlock Text="Mức lương" Grid.Row="4" Margin="5"/>
+                    <TextBox x:Name="tbSalary" Grid.Row="4" Grid.Column="1" Margin="5"/>
+
+                    <TextBlock Text="Ngày làm việc" Grid.Row="5" Margin="5"/>
+                    <DatePicker x:Name="dpStartTime" Grid.Row="5" Grid.Column="1" SelectedDate="1999-10-04" Margin="5"/>
+                </Grid>
             </Grid>
+        </GroupBox>
+
+        <!-- Chức năng -->
+        <GroupBox Header="Chức năng" Grid.Column="2" FontWeight="Bold" Margin="10,0,0,0"  Grid.Row="0">
+            <StackPanel>
+                <Button x:Name="btnAdd" Content="Thêm" Margin="5" Width="80" Click="btnAdd_Click"/>
+                <Button x:Name="btnUpdate" Content="Sửa" Margin="5" Width="80" Click="btnUpdate_Click"/>
+                <Button x:Name="btnDelete" Content="Xóa" Margin="5" Width="80" Click="btnDelete_Click"/>
+                <Button x:Name="btnSaveImage" Content="Lưu ảnh" Margin="5" Width="80"/>
+            </StackPanel>
+        </GroupBox>
+
+        <!--Danh sách nhân viên-->
+
+        <StackPanel Grid.Row="2" Grid.ColumnSpan="3">
+            <ListView x:Name="lvEmployees" ItemsSource="{Binding Path=Employees}" Height="auto" MouseLeftButtonUp="Member_MouseLeftButtonUp">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="ID" Width="50" DisplayMemberBinding="{Binding Path= EmployeeId}" />
+                        <GridViewColumn Header="Họ và tên" Width="80" DisplayMemberBinding="{Binding Path= FullName}" />
+                        <GridViewColumn Header="Giới tính" Width="80" DisplayMemberBinding="{Binding Path= Gender}" />
+                        <GridViewColumn Header="Ngày sinh" Width="80" DisplayMemberBinding="{Binding Path= DateOfBirth}" />
+                        <GridViewColumn Header="Email" Width="100" DisplayMemberBinding="{Binding Path= Email}" />
+                        <GridViewColumn Header="Số điện thoại" Width="100" DisplayMemberBinding="{Binding Path= PhoneNumber}" />
+                        <GridViewColumn Header="Địa chỉ" Width="100" DisplayMemberBinding="{Binding Path= Address}" />
+                        <GridViewColumn Header="Phòng ban" Width="100" DisplayMemberBinding="{Binding Path= Department.DepartmentName}" />
+                        <GridViewColumn Header="Chức vụ" Width="100" DisplayMemberBinding="{Binding Path= Position.PositionName}" />
+                        <GridViewColumn Header="Mức lương" Width="80" DisplayMemberBinding="{Binding Path= Position.BasicSalary}" />
+                        <GridViewColumn Header="Ngày bắt đầu làm" Width="150" DisplayMemberBinding="{Binding Path= StartDate}" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </StackPanel>
     </Grid>
 </Window>
