--- a/WPF/BaoCaoChamCong.xaml
+++ b/WPF/BaoCaoChamCong.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="Báo Cáo Chấm Công" Height="500" Width="850" Background="#f2f2f2">
     <Grid Margin="20">
         <Grid.RowDefinitions>
@@ -40,6 +41,9 @@
 
             <Button Content="Xác nhận" Width="100" Height="30" Margin="20,0,0,0"
                     Background="#007BFF" Foreground="White" FontWeight="Bold" Click="GenerateReport_Click"/>
+            <Button Content="Quay lại" Width="100" Height="30" Margin="20,0,0,0"
+Background="#DC3545" Foreground="White" FontWeight="Bold"
+Click="Back_Click"/>
         </StackPanel>
 
         <!-- Bảng hiển thị báo cáo -->
