--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -5,8 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+         Title="Login screen" Height="400" Width="450"
+        WindowStartupLocation="CenterScreen"
+        Background="White"
+        ResizeMode="NoResize">
 
+    <Grid Margin="0 50 0 0" Width="350" Height="300">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Đăng nhập tài khoản" 
+                   FontSize="18" FontWeight="Bold" Foreground="DodgerBlue"
+                   HorizontalAlignment="Center" Margin="0,0,0,20"/>
+
+        <Label Content="Tên tài khoản" Grid.Row="1" 
+               Height="30" FontSize="14" />
+
+        <TextBox x:Name="tbUsername" Grid.Row="2" Height="35" Margin="0,0,0,10"
+                 Padding="5" FontSize="14"
+                 BorderBrush="LightGray"/>
+
+        <Label Content="Mật khẩu" Grid.Row="3"
+               Height="30" Margin="0,0,0,0"/>
+
+        <PasswordBox Grid.Row="4" Height="35" Margin="0,0,0,0"
+                     Padding="5" FontSize="14"
+                     BorderBrush="LightGray"
+                     x:Name="pbPassword"/>
+
+        <Button x:Name="btnLogin" Grid.Row="5" Content="Đăng nhập"
+                Height="40" Background="DodgerBlue" Foreground="White"
+                FontSize="16" FontWeight="Bold"
+                Margin="0,10,0,0" Click="Button_Login"/>
     </Grid>
 </Window>
