--- a/WPF/EmployeeDashboard.xaml
+++ b/WPF/EmployeeDashboard.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WPF"
                mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-                Title="Admin Dashboard" Height="600" Width="1000" Background="#eef1f5">
+                Title="Employee Dashboard" Height="600" Width="1000" Background="#eef1f5">
 
     <Grid>
         <!-- Header with buttons -->
