--- a/WPF/EmployeeManager.xaml
+++ b/WPF/EmployeeManager.xaml
@@ -1,27 +1,23 @@
-﻿<Window x:Class="WPF.EmployeeManager"
-         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-         xmlns:local="clr-namespace:WPF"
-         mc:Ignorable="d" 
-         d:DesignHeight="330" d:DesignWidth="800">
-    <Grid Margin="10">
+﻿<UserControl x:Class="WPF.EmployeeManager"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Grid Margin="10" Background="LightBlue">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="7*" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="80"/>
             <RowDefinition Height="250"/>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <GroupBox Header="Ảnh đại diện" FontWeight="Bold" Padding="10" Grid.Column="0" Grid.Row="1">
+        <GroupBox Header="Ảnh đại diện" FontWeight="Bold" Padding="10" Grid.Column="0" Grid.Row="0">
             <Image x:Name="imgAvt" Source="Resource\icon\user1.png" Width="auto" Height="auto"/>
         </GroupBox>
         <!-- Thông tin nhân viên -->
-        <GroupBox Header="Thông tin nhân viên" FontWeight="Bold" Padding="10" Grid.Row="1" Grid.Column="1" Margin="10,0,0,0">
+        <GroupBox Header="Thông tin nhân viên" FontWeight="Bold" Padding="10" Grid.Row="0" Grid.Column="1" Margin="10,0,0,0">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="5*"/>
@@ -29,6 +25,7 @@
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -47,26 +44,27 @@
                     <TextBlock Text="Họ và tên" Grid.Row="1" Margin="5"/>
                     <TextBox x:Name="tbName" Grid.Row="1" Grid.Column="1" Margin="5"/>
 
-                    <TextBlock Text="Giới tính" Grid.Row="2" Margin="5"/>
-                    <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
+                    <TextBlock Text="Mật khẩu" Grid.Row="2" Margin="5"/>
+                    <PasswordBox x:Name="pbPassword" Grid.Row="2" Grid.Column="1" Margin="5"/>
+
+                    <TextBlock Text="Giới tính" Grid.Row="3" Margin="5"/>
+                    <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1">
                         <RadioButton x:Name="rbMale" Content="Nam" Margin="5"/>
                         <RadioButton x:Name="rbFemale" Content="Nữ" Margin="5"/>
                     </StackPanel>
 
-                    <TextBlock Text="Ngày sinh" Grid.Row="3" Margin="5"/>
-                    <DatePicker x:Name="dpDate" Grid.Row="3" Grid.Column="1" SelectedDate="1999-10-04" Margin="5"/>
+                    <TextBlock Text="Ngày sinh" Grid.Row="4" Margin="5"/>
+                    <DatePicker x:Name="dpDate" Grid.Row="4" Grid.Column="1" SelectedDate="1999-10-04" Margin="5"/>
 
-                    <TextBlock Text="Email" Grid.Row="4" Margin="5"/>
-                    <TextBox Grid.Row="4" Grid.Column="1" Margin="5"/>
+                    <TextBlock Text="Email" Grid.Row="5" Margin="5"/>
+                    <TextBox x:Name="tbMail" Grid.Row="5" Grid.Column="1" Margin="5"/>
 
-                    <TextBlock Text="Email" Grid.Row="4" Margin="5"/>
-                    <TextBox x:Name="tbMail" Grid.Row="4" Grid.Column="1" Margin="5"/>
-
-                    <TextBlock Text="Ảnh đại diện" Grid.Row="5" Margin="5"/>
-                    <Button x:Name="btnAvatar" Content="Chọn ảnh đại diện" Grid.Column="2" Grid.Row="5"  Margin="5" Height="17.96" Click="btnAvatar_Click"/>
+                    <TextBlock Text="Username" Grid.Row="6" Margin="5"/>
+                    <TextBox x:Name="tbUsername" Grid.Column="2" Grid.Row="6"  Margin="5" Height="17.96"/>
                 </Grid>
                 <Grid Grid.Column="1">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -96,12 +94,15 @@
 
                     <TextBlock Text="Ngày làm việc" Grid.Row="5" Margin="5"/>
                     <DatePicker x:Name="dpStartTime" Grid.Row="5" Grid.Column="1" SelectedDate="1999-10-04" Margin="5"/>
+
+                    <TextBlock Text="Ảnh đại diện" Grid.Row="6" Margin="5"/>
+                    <Button x:Name="btnAvatar" Content="Chọn ảnh đại diện" Grid.Column="2" Grid.Row="6"  Margin="5" Height="17.96" Click="btnAvatar_Click"/>
                 </Grid>
             </Grid>
         </GroupBox>
 
         <!-- Chức năng -->
-        <GroupBox Header="Chức năng" Grid.ColumnSpan="2" FontWeight="Bold"   Grid.Row="0" Height="80" VerticalAlignment="Top">
+        <GroupBox Header="Chức năng" Grid.ColumnSpan="2" FontWeight="Bold" Grid.Row="1" Height="80" VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal" Height="35">
                 <Button x:Name="btnAdd" Content="Thêm" Margin="5" Width="80" Click="btnAdd_Click"/>
                 <Button x:Name="btnUpdate" Content="Sửa" Margin="5" Width="80" Click="btnUpdate_Click"/>
@@ -112,7 +113,7 @@
 
         <!--Danh sách nhân viên-->
 
-        <!--<StackPanel Grid.Row="2" Grid.ColumnSpan="3">
+        <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Margin="0 10 0 0">
             <ListView x:Name="lvEmployees" ItemsSource="{Binding Path=Employees}" Height="auto" MouseLeftButtonUp="Member_MouseLeftButtonUp">
                 <ListView.View>
                     <GridView>
@@ -130,6 +131,6 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-        </StackPanel>-->
+        </StackPanel>
     </Grid>
-</Window>
+</UserControl>
