--- a/WPF/EmployeeManager.xaml
+++ b/WPF/EmployeeManager.xaml
@@ -108,6 +108,9 @@
                 <Button x:Name="btnUpdate" Content="Sửa" Margin="5" Width="80" Click="btnUpdate_Click"/>
                 <Button x:Name="btnDelete" Content="Xóa" Margin="5" Width="80" Click="btnDelete_Click"/>
                 <Button x:Name="btnSaveImage" Content="Lưu ảnh" Margin="5" Width="80"/>
+                <Button x:Name="btnBackup" Content="Sao lưu" Margin="5" Width="80" Click="btnBackup_Click"/>
+                <Button x:Name="btnRestore" Content="Phục hồi" Margin="5" Width="80" Click="btnRestore_Click"/>
+
             </StackPanel>
         </GroupBox>
 
