--- a/WPF/Admin/ManagerOnLeave.xaml
+++ b/WPF/Admin/ManagerOnLeave.xaml
@@ -7,6 +7,7 @@
         xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Quản lý nghỉ phép"
+        WindowStartupLocation="CenterScreen"
         Height="500" Width="900"
         Background="#F4F6F9">
 
@@ -45,6 +46,14 @@
 
         <StackPanel Grid.Row="2" Orientation="Horizontal"
                     HorizontalAlignment="Right" Margin="0 10 0 0">
+            <Button Width="140" Margin="5" 
+        Background="Gray" Foreground="White" Click="Button_Click">
+                <StackPanel Orientation="Horizontal">
+                    <material:PackIcon Kind="ArrowBack" Width="20" Height="20" Margin="0 0 5 0"/>
+                    <TextBlock Text="Quay lại"/>
+                </StackPanel>
+            </Button>
+
             <Button Width="140" Margin="5" Click="Add_Click"
                     Background="#2196F3" Foreground="White">
                 <StackPanel Orientation="Horizontal">
