--- a/WPF/ChamCong.xaml
+++ b/WPF/ChamCong.xaml
@@ -20,34 +20,19 @@
                HorizontalAlignment="Center" Margin="0,10,0,20"/>
 
         <!-- DataGrid hiển thị danh sách chấm công -->
-        <DataGrid
-            Name="AttendancesList"
-              AutoGenerateColumns="False"
-              Grid.Row="1"
-              Margin="0,0,0,10"
-              RowBackground="White"
-              AlternatingRowBackground="#E3E3E3"
-              BorderThickness="1" BorderBrush="Gray" SelectionChanged="DataGrid_SelectionChanged">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Ngày" Width="150">
-                    <DataGridTextColumn.Binding>
-                        <Binding Path="WorkDate" StringFormat="{}{0:dd/MM/yyyy}" />
-                    </DataGridTextColumn.Binding>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Giờ vào" Width="150">
-                    <DataGridTextColumn.Binding>
-                        <Binding Path="CheckInTime" StringFormat="{}{0:HH:mm}" />
-                    </DataGridTextColumn.Binding>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Giờ ra" Width="150">
-                    <DataGridTextColumn.Binding>
-                        <Binding Path="CheckOutTime" StringFormat="{}{0:HH:mm}" />
-                    </DataGridTextColumn.Binding>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Trạng thái" Binding="{Binding WorkStatus}" Width="150"/>
-                <DataGridTextColumn Header="Giờ làm" Binding="{Binding WorkHours}" Width="100"/>
-            </DataGrid.Columns>
-        </DataGrid>
+        <ListView Name="AttendancesListView" Grid.Row="1" Margin="0,0,0,10" BorderThickness="1" BorderBrush="Gray"
+          Background="White">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Ngày" Width="150" DisplayMemberBinding="{Binding WorkDate, StringFormat={}{0:dd/MM/yyyy}}"/>
+                    <GridViewColumn Header="Giờ vào" Width="150" DisplayMemberBinding="{Binding CheckInTime, StringFormat={}{0:HH:mm}}"/>
+                    <GridViewColumn Header="Giờ ra" Width="150" DisplayMemberBinding="{Binding CheckOutTime, StringFormat={}{0:HH:mm}}"/>
+                    <GridViewColumn Header="Trạng thái" Width="150" DisplayMemberBinding="{Binding WorkStatus}"/>
+                    <GridViewColumn Header="Giờ làm" Width="100" DisplayMemberBinding="{Binding WorkHours}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
 
         <!-- Các nút điều khiển -->
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
