--- a/WPF/EmployeeDashboard_Huy.xaml
+++ b/WPF/EmployeeDashboard_Huy.xaml
@@ -13,12 +13,12 @@
         <DockPanel LastChildFill="True">
             <StackPanel Orientation="Horizontal" Background="#E65100" Height="80" DockPanel.Dock="Top" VerticalAlignment="Top" HorizontalAlignment="Stretch">
                 <TextBlock Text="Employee Dashboard" Foreground="White" FontSize="28" FontWeight="Bold" VerticalAlignment="Center" Margin="20,0,20,0"/>
-                <Button Content="Chấm Công"  Margin="20,0,0,0" Click="ChamCong_Click" Width="110"/>
-                <Button Content="Báo Cáo Chấm Công" Margin="20,0,0,0"  Click="BaoCaoChamCong_Click" Width="130"/>
-                <Button Content="Báo Cáo Lương Thưởng"  Margin="20,0,0,0" Click="BaoCaoLuong_Click" Width="130"/>
-                <Button Content="Profile" Margin="20,0,0,0" Click="Profile_Click" Width="79"/>
-                <Button Content="Thông Báo" Margin="20,0,0,0" Width="79"/>
-                <Button Content="🔑 Đăng Xuất" Margin="20,0,0,0" Click="Logout_Click" Width="110"/>
+                <Button Content="Chấm Công"  Margin="20,0,0,0" Click="ChamCong_Click" Width="110" Height="35"/>
+                <Button Content="Báo Cáo Chấm Công" Margin="20,0,0,0"  Click="BaoCaoChamCong_Click" Width="130" Height="35"/>
+                <Button Content="Báo Cáo Lương Thưởng"  Margin="20,0,0,0" Click="BaoCaoLuong_Click" Width="130" Height="35"/>
+                <Button Content="Profile" Margin="20,0,0,0" Click="Profile_Click" Width="79" Height="35"/>
+                <Button Content="Thông Báo" Margin="20,0,0,0" Width="79" Height="35"/>
+                <Button Content="🔑 Đăng Xuất" Margin="20,0,0,0" Click="Logout_Click" Width="110" Height="35"/>
             </StackPanel>
         </DockPanel>
 
