--- a/WPF/EmployeeDashboard_Huy.xaml
+++ b/WPF/EmployeeDashboard_Huy.xaml
@@ -18,7 +18,7 @@
                 <Button Content="Báo Cáo Lương Thưởng"  Margin="20,0,0,0" Click="BaoCaoLuong_Click" Width="130" Height="35"/>
                 <Button Content="Profile" Margin="20,0,0,0" Click="Profile_Click" Width="79" Height="35"/>
                 <Button Content="Tạo đơn xin nghỉ" Margin="20,0,0,0" Width="100" Height="36" Click="Button_Click"/>
-                <Button Content="Thông Báo" Margin="20,0,0,0" Width="79" Height="35"/>
+                <Button Content="Thông Báo" Margin="20,0,0,0" Width="79" Height="35" Click="Notification_Click"/>
                 <Button Content="🔑 Đăng Xuất" Margin="20,0,0,0" Click="Logout_Click" Width="110" Height="35"/>
             </StackPanel>
         </DockPanel>
